--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -19,6 +19,33 @@ h1, h2 {
     border-bottom: 1px dashed #F5F5EF ; text-decoration: none;
 }
 
-.reveal-card{
-
+.btn-primary{
+    background-color: #202837
+    !important;
+    border-color: #202837
+    !important;
+    font-family: 'Lato', serif
+    !important;
 }
+
+.image-blurred-edge{
+    background-image: url("../pictures/lady-justice.jpg");
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 0 8px 8px #F5F5EF inset;
+}
+
+#topBanner{
+    position:relative;
+}
+
+#legalClinics{
+    background-color: #F00;
+    display: inline-block;
+    height: 30px;
+    position: absolute;
+    width: 100px;
+    top:10px;
+}​
