--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -28,24 +28,46 @@ h1, h2 {
     !important;
 }
 
+.btn-secondary{
+    background-color: #B29E79
+    !important;
+    border-color: #202837
+    !important;
+    font-family: 'Lato', serif
+    !important;
+}
+
 .image-blurred-edge{
     background-image: url("../pictures/lady-justice.jpg");
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 0 0 8px 8px #F5F5EF inset;
+    -webkit-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.5);
+    box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.5);
 }
 
-#topBanner{
-    position:relative;
+
+.break-container{
+    background-color: #202837;
+    left: 0;
+    width: 100vw
+    !important;
+    position:absolute
+    !important;
 }
 
-#legalClinics{
-    background-color: #F00;
-    display: inline-block;
-    height: 30px;
-    position: absolute;
-    width: 100px;
-    top:10px;
-}​
+.break-container::before{
+    background-color: #202837;
+    width: 100vw
+    !important;
+    position:absolute
+    !important;
+}
+
+.small-txt{
+    /* Placeholder */
+    font-size: 1.25vw
+    !important;
+}
