--- a/stylesheet/moreAnimations.css
+++ b/stylesheet/moreAnimations.css
@@ -25,13 +25,13 @@
 .grow {
   display: inline-block;
   transition-duration: 0.3s;
-  transition-property: transform !important;
+  transition-property: transform;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
 .grow:hover {
-  transform: scale(1.05) !important;
+  transform: scale(1.1);
 }
 
 /* Shrink */
